--- a/Without Backend/historia.html
+++ b/Without Backend/historia.html
@@ -175,19 +175,24 @@
         }
     </style>
 </head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="tekniker.html">Odlingstekniker</a></li>
-                <li><a href="fordelar.html">Fördelar</a></li>
-                <li><a href="nackdelar.html">Nackdelar</a></li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="kallor.html">Källor</a></li>
-            </ul>
-        </nav>
-    </header>
+<script src="navbar.js"></script>
+<header>
+    <nav>
+        <div class="menu-toggle" id="mobile-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul id="menu">
+            <li><a href="/">Hem</a></li>
+            <li><a href="tekniker">Odlingstekniker</a></li>
+            <li><a href="fordelar">Fördelar</a></li>
+            <li><a href="nackdelar">Nackdelar</a></li>
+            <li><a href="historia">Historia</a></li>
+            <li><a href="kallor">Källor</a></li>
+        </ul>
+    </nav>
+</header>
 
     <main class="container">
         <h1>Vattenkulturens Historia</h1>
