--- a/Without Backend/index.html
+++ b/Without Backend/index.html
@@ -7,18 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="navbar.js"></script>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="tekniker.html">Odlingstekniker</a></li>
-                <li><a href="fordelar.html">Fördelar</a></li>
-                <li><a href="nackdelar.html">Nackdelar</a></li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="kallor.html">Källor</a></li>
+            <div class="menu-toggle" id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul id="menu">
+                <li><a href="/">Hem</a></li>
+                <li><a href="tekniker">Odlingstekniker</a></li>
+                <li><a href="fordelar">Fördelar</a></li>
+                <li><a href="nackdelar">Nackdelar</a></li>
+                <li><a href="historia">Historia</a></li>
+                <li><a href="kallor">Källor</a></li>
             </ul>
         </nav>
     </header>
+    
 
     <main class="container">
         <section class="hero">
@@ -79,6 +86,7 @@
     <footer>
         <p>&copy; 2025 Vattenkultur. Alla rättigheter förbehållna.</p>
         <p>För frågor om upphovsrätt eller begäran om borttagning av bilder, vänligen kontakta: <a href="mailto:dmca@pajsen.se" style="color: white;">dmca@pajsen.se</a></p>
+        <p>Har fått tillstånd av ägarna att använda bilderna i uppgiften</p>
     </footer>
 </body>
 </html>
