--- a/Without Backend/kallor.html
+++ b/Without Backend/kallor.html
@@ -7,19 +7,25 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+    <script src="navbar.js"></script>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="tekniker.html">Odlingstekniker</a></li>
-                <li><a href="fordelar.html">Fördelar</a></li>
-                <li><a href="nackdelar.html">Nackdelar</a></li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="kallor.html">Källor</a></li>
+            <div class="menu-toggle" id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul id="menu">
+                <li><a href="/">Hem</a></li>
+                <li><a href="tekniker">Odlingstekniker</a></li>
+                <li><a href="fordelar">Fördelar</a></li>
+                <li><a href="nackdelar">Nackdelar</a></li>
+                <li><a href="historia">Historia</a></li>
+                <li><a href="kallor">Källor</a></li>
             </ul>
         </nav>
     </header>
+    
 
     <main class="container">
         <h1>Källor</h1>
@@ -34,6 +40,7 @@
                 <li>Savvas, D., & Passam, H. (Eds.). (2002). Hydroponic Production of Vegetables and Ornamentals. Embryo Publications.</li>
                 <li>Jensen, M. H., & Collins, W. L. (1985). Hydroponic vegetable production. Horticultural Reviews, 7, 483-558.</li>
                 <li>Trejo-Téllez, L. I., & Gómez-Merino, F. C. (2012). Nutrient solutions for hydroponic systems. Hydroponics-A Standard Methodology for Plant Biological Researches, 1-22.</li>
+                <li>Wikipedia artikel: <a href="https://sv.wikipedia.org/wiki/Vattenkultur" target="_blank">Vattenkultur</a>.</li>
             </ol>
         </div>
     </main>
