--- a/Without Backend/nackdelar.html
+++ b/Without Backend/nackdelar.html
@@ -7,19 +7,25 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+    <script src="navbar.js"></script>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="tekniker.html">Odlingstekniker</a></li>
-                <li><a href="fordelar.html">Fördelar</a></li>
-                <li><a href="nackdelar.html">Nackdelar</a></li>
-                <li><a href="historia.html">Historia</a></li>
-                <li><a href="kallor.html">Källor</a></li>
+            <div class="menu-toggle" id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul id="menu">
+                <li><a href="/">Hem</a></li>
+                <li><a href="tekniker">Odlingstekniker</a></li>
+                <li><a href="fordelar">Fördelar</a></li>
+                <li><a href="nackdelar">Nackdelar</a></li>
+                <li><a href="historia">Historia</a></li>
+                <li><a href="kallor">Källor</a></li>
             </ul>
         </nav>
     </header>
+    
 
     <main class="container">
         <h1>Nackdelar att Beakta</h1>
